--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                 </div>
             </div>
             <button type="submit">Start</button>
+            <a href="game.html">fgh</a>
         </form>
     </div>
 </body>
