--- a/game.html
+++ b/game.html
@@ -21,6 +21,7 @@
             </div>
         </div>
     </div>
-    <script src="appUi.js"></script>
+    <script type="module" src="game.js"></script>
+    <script type="module" src="appUi.js"></script>
 </body>
 </html>
