--- a/game.html
+++ b/game.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="wrapper">
+        <div class="wining-player"></div>
         <div class="gameboard"></div>
         <div class="match-status">
             <div>
