--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             <a href="game.html">fgh</a>
         </form>
     </div>
+    <script type="module" src="prepareGameEnv.js"></script>
 </body>
 
 </html>
