--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     </div>
                     <div>
                         <label for="player-color-2">player-2-color</label>
-                        <input type="color" name="player-color-2 id=" player-color-2">
+                        <input type="color" name="player-color-2" id="player-color-2">
                     </div>
                 </div>
             </div>
@@ -40,11 +40,11 @@
                 <div>
                     <div>
                         <label for="light">Light</label>
-                        <input type="radio" name="mode" id="light">
+                        <input type="radio" name="mode" id="light" value="light">
                     </div>
                     <div>
                         <label for="dark">Dark</label>
-                        <input type="radio" name="mode" id="dark">
+                        <input type="radio" name="mode" id="dark" value="dark">
                     </div>
                 </div>
             </div>
@@ -53,6 +53,7 @@
         </form>
     </div>
     <script type="module" src="prepareGameEnv.js"></script>
+
 </body>
 
 </html>
