--- a/game.html
+++ b/game.html
@@ -9,20 +9,19 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="wining-player"></div>
+        <div class="wining-player">First Match</div>
         <div class="gameboard"></div>
         <div class="match-status">
             <div>
                 <p class="player-1-name">Default-1</p>
-                <div class="wins">0</div>
+                <div class="wins1">0</div>
             </div>
             <div>
                 <p class="player-2-name">Default-2</p>
-                <div class="wins">0</div>
+                <div class="wins2">0</div>
             </div>
         </div>
     </div>
     <script type="module" src="game.js"></script>
-    <script type="module" src="appUi.js"></script>
 </body>
 </html>
