--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         </form>
     </div>
     <script type="module" src="prepareGameEnv.js"></script>
+    <script type="module" src="game.js"></script>
 
 </body>
 
