--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
                     </div>
                 </div>
             </div>
-            <button type="submit">Start</button>
-            <a href="game.html">fgh</a>
+            <button type="submit">play</button>
         </form>
     </div>
     <script type="module" src="prepareGameEnv.js"></script>
