--- a/game.html
+++ b/game.html
@@ -17,12 +17,13 @@
                 <div class="wins1">0</div>
             </div>
             <div>
-              <svg class="reset-icon" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-rotate-ccw"><polyline points="1 4 1 10 7 10"></polyline><path d="M3.51 15a9 9 0 1 0 2.13-9.36L1 10"></path></svg>
-            </div>
-            <div>
                 <p class="player-2-name">Default-2</p>
                 <div class="wins2">0</div>
             </div>
+        </div>
+        <div style="margin-top: 2rem">
+              <svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="reset-icon feather feather-rotate-ccw"><polyline points="1 4 1 10 7 10"></polyline><path d="M3.51 15a9 9 0 1 0 2.13-9.36L1 10"></path>
+              </svg>
         </div>
     </div>
     <script type="module" src="game.js"></script>
