--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <form action="" method="post">
             <div class="player-div-1">
                 <label for="player-1">Player-1</label>
-                <input type="text" name="player-1" id="player-1">
+                <input type="text" name="player-1" id="player-1" required placeholder="player-1">
             </div>
             <div class="player-div-2">
                 <label for="player-2">Player-2</label>
-                <input type="text" name="player-2" id="player-2">
+                <input type="text" name="player-2" id="player-2" required placeholder="player-2">
             </div>
             <div class="color">
                 <p>Select player Color</p>
@@ -40,7 +40,7 @@
                 <div>
                     <div>
                         <label for="light">Light</label>
-                        <input type="radio" name="mode" id="light" value="light">
+                        <input type="radio" name="mode" id="light" value="light" checked>
                     </div>
                     <div>
                         <label for="dark">Dark</label>
