--- a/src/index.html
+++ b/src/index.html
@@ -25,11 +25,11 @@
                 <div>
                     <div>
                         <label for="player-color-1">player-1-color</label>
-                        <input type="color" name="player-color-1" id="player-color-1" pattern="#[0-9a-fA-F]{6}" title="Enter a valid hexadecimal color code" value="#ff0000">
+                        <input type="color" name="player-color-1" id="player-color-1" value="#ff0000">
                     </div>
                     <div>
                         <label for="player-color-2">player-2-color</label>
-                        <input type="color" name="player-color-2" id="player-color-2" pattern="#[0-9a-fA-F]{6}" title="Enter a valid hexadecimal color code" value="#00ff00">
+                        <input type="color" name="player-color-2" id="player-color-2" value="#00ff00">
                     </div>
                 </div>
             </div>
